Tweak and use webpack to bundle javascript files

--- a/app/templates/head.html
+++ b/app/templates/head.html
@@ -78,4 +78,8 @@
   <!-- Material Design icons -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="/styles/main.css">
+
+  <!-- List dependencies in the head for faster discovery/preloading -->
+  <script type="module" src="/scripts/runtime.js"></script>
+  <script type="module" src="/scripts/main.js"></script>
 </head>
