--- a/app/templates/head.html
+++ b/app/templates/head.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="Strict-Transport-Security" content="max-age=10886400">
+    <meta http-equiv="Content-Security-Policy"
+      content="default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src https://fonts.gstatic.com; img-src 'self' https://www.google-analytics.com; {% if mainScripts %} script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.google-analytics.com; connect-src 'self' https://bader-nasser.appspot.com; {% else %} script-src 'self' 'unsafe-inline' https://www.google-analytics.com; {% endif %}">
   {% endif %}
 
   <meta name="description" content="{{ description }}">
