--- a/app/templates/scripts.html
+++ b/app/templates/scripts.html
@@ -13,7 +13,7 @@
       a.async = 1;
       a.src = g;
       m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
     ga('create', '{{ trackingID }}', 'auto');
     ga('send', 'pageview');
   </script>
