--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -6,16 +6,41 @@ https://www.youtube.com/playlist?list=PLbSquHt1VCf1kpv9WRGMCA9_Nn4vCLZ9Y
 
 /* Gatsby default styles */
 
-html {
-	font-family: sans-serif;
-	-ms-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
+* {
+	box-sizing: inherit;
 }
+
+*::before {
+	box-sizing: inherit;
+}
+
+*::after {
+	box-sizing: inherit;
+}
+
+html {
+	font-family: sans-serif, georgia, serif;
+	font-size: 112.5%/1.45em;
+	text-size-adjust: 100%;
+	box-sizing: border-box;
+	overflow-y: scroll;
+}
+
 body {
 	margin: 0;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	color: hsl(0deg 0% 0% / 80%);
+	font-family: georgia, serif;
+	font-weight: normal;
+	word-wrap: break-word;
+	font-kerning: normal;
+	font-feature-settings: 'kern', 'liga', 'clig', 'calt';
+	background: #f5f5f5;
+	/* stylelint-disable-next-line declaration-block-no-duplicate-properties */
+	background: linear-gradient(to bottom, #f5f5f5, 70%, #fff);
 }
+
 article,
 aside,
 details,
@@ -30,56 +55,86 @@ section,
 summary {
 	display: block;
 }
+
 audio,
 canvas,
 progress,
 video {
 	display: inline-block;
 }
+
 audio:not([controls]) {
 	display: none;
 	height: 0;
 }
+
 progress {
 	vertical-align: baseline;
 }
+
 [hidden],
 template {
 	display: none;
 }
+
 a {
 	background-color: transparent;
-	-webkit-text-decoration-skip: objects;
+	text-decoration-skip: objects;
 	text-decoration: none;
 }
+
 a:active,
 a:hover {
 	outline-width: 0;
 }
+
 abbr[title] {
-	border-bottom: none;
-	text-decoration: underline;
 	text-decoration: underline dotted;
+	border-bottom: 1px dotted hsl(0deg 0% 0% / 50%);
+	cursor: help;
 }
+
 b,
 strong {
-	font-weight: inherit;
 	font-weight: bolder;
 }
+
 dfn {
 	font-style: italic;
 }
+
 h1 {
-	font-size: 2em;
-	margin: 0.67em 0;
+	font-size: 2.25rem;
+	margin: 0;
+	margin-bottom: 1.45rem;
+	padding: 0;
+	color: inherit;
+	font-family:
+		-apple-system,
+		BlinkMacSystemFont,
+		'Segoe UI',
+		Roboto,
+		Oxygen,
+		Ubuntu,
+		Cantarell,
+		'Fira Sans',
+		'Droid Sans',
+		'Helvetica Neue',
+		sans-serif;
+	font-weight: bold;
+	text-rendering: optimizeLegibility;
+	line-height: 1.1;
 }
+
 mark {
 	background-color: #ff0;
 	color: #000;
 }
+
 small {
 	font-size: 80%;
 }
+
 sub,
 sup {
 	font-size: 75%;
@@ -87,33 +142,52 @@ sup {
 	position: relative;
 	vertical-align: baseline;
 }
+
 sub {
 	bottom: -0.25em;
 }
+
 sup {
 	top: -0.5em;
 }
+
 img {
 	border-style: none;
+	max-width: 100%;
+	margin: 0;
+	margin-bottom: 1.45rem;
+	padding: 0;
 }
+
 svg:not(:root) {
 	overflow: hidden;
 }
+
 code,
 kbd,
 pre,
 samp {
-	font-family: monospace, monospace;
+	font-family: monospace;
 	font-size: 1em;
 }
+
 figure {
-	margin: 1em 40px;
+	padding: 0;
+	margin: 0;
+	margin-bottom: 1.45rem;
 }
+
 hr {
 	box-sizing: content-box;
-	height: 0;
 	overflow: visible;
+	margin: 0;
+	padding: 0;
+	margin-bottom: calc(1.45rem - 1px);
+	background: hsl(0deg 0% 0% / 20%);
+	border: none;
+	height: 1px;
 }
+
 button,
 input,
 optgroup,
@@ -122,23 +196,28 @@ textarea {
 	font: inherit;
 	margin: 0;
 }
+
 optgroup {
-	font-weight: 700;
+	font-weight: bold;
 }
+
 button,
 input {
 	overflow: visible;
 }
+
 button,
 select {
 	text-transform: none;
 }
+
 [type='reset'],
 [type='submit'],
 button,
 html [type='button'] {
-	-webkit-appearance: button;
+	appearance: button;
 }
+
 [type='button']::-moz-focus-inner,
 [type='reset']::-moz-focus-inner,
 [type='submit']::-moz-focus-inner,
@@ -146,17 +225,21 @@ button::-moz-focus-inner {
 	border-style: none;
 	padding: 0;
 }
+
 [type='button']:-moz-focusring,
 [type='reset']:-moz-focusring,
 [type='submit']:-moz-focusring,
 button:-moz-focusring {
 	outline: 1px dotted ButtonText;
 }
+
 fieldset {
-	border: 1px solid silver;
-	margin: 0 2px;
-	padding: 0.35em 0.625em 0.75em;
+	margin: 0;
+	padding: 0;
+	margin-bottom: 1.45rem;
+	border: 1px solid #c0c0c0;
 }
+
 legend {
 	box-sizing: border-box;
 	color: inherit;
@@ -165,465 +248,324 @@ legend {
 	padding: 0;
 	white-space: normal;
 }
+
 textarea {
 	overflow: auto;
 }
+
 [type='checkbox'],
 [type='radio'] {
 	box-sizing: border-box;
 	padding: 0;
 }
+
 [type='number']::-webkit-inner-spin-button,
 [type='number']::-webkit-outer-spin-button {
 	height: auto;
 }
+
 [type='search'] {
-	-webkit-appearance: textfield;
+	appearance: textfield;
 	outline-offset: -2px;
 }
+
 [type='search']::-webkit-search-cancel-button,
 [type='search']::-webkit-search-decoration {
-	-webkit-appearance: none;
+	appearance: none;
 }
+
 ::-webkit-input-placeholder {
 	color: inherit;
-	opacity: 0.54;
+	opacity: 54%;
 }
+
 ::-webkit-file-upload-button {
-	-webkit-appearance: button;
+	appearance: button;
 	font: inherit;
 }
-html {
-	font: 112.5%/1.45em georgia, serif;
-	box-sizing: border-box;
-	overflow-y: scroll;
-}
-* {
-	box-sizing: inherit;
-}
-*:before {
-	box-sizing: inherit;
-}
-*:after {
-	box-sizing: inherit;
-}
-body {
-	color: hsla(0, 0%, 0%, 0.8);
-	font-family: georgia, serif;
-	font-weight: normal;
-	word-wrap: break-word;
-	font-kerning: normal;
-	-moz-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
-	-ms-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
-	-webkit-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
-	font-feature-settings: 'kern', 'liga', 'clig', 'calt';
-}
-img {
-	max-width: 100%;
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
-	margin-bottom: 1.45rem;
-}
-h1 {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
-	margin-bottom: 1.45rem;
-	color: inherit;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-	font-weight: bold;
-	text-rendering: optimizeLegibility;
-	font-size: 2.25rem;
-	line-height: 1.1;
-}
+
 h2 {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
+	padding: 0;
+	margin: 0;
 	margin-bottom: 1.45rem;
 	color: inherit;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family:
+		-apple-system,
+		BlinkMacSystemFont,
+		'Segoe UI',
+		Roboto,
+		Oxygen,
+		Ubuntu,
+		Cantarell,
+		'Fira Sans',
+		'Droid Sans',
+		'Helvetica Neue',
+		sans-serif;
 	font-weight: bold;
 	text-rendering: optimizeLegibility;
-	font-size: 1.62671rem;
+	font-size: 1.627rem;
 	line-height: 1.1;
 }
+
 h3 {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
+	padding: 0;
+	margin: 0;
 	margin-bottom: 1.45rem;
 	color: inherit;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family:
+		-apple-system,
+		BlinkMacSystemFont,
+		'Segoe UI',
+		Roboto,
+		Oxygen,
+		Ubuntu,
+		Cantarell,
+		'Fira Sans',
+		'Droid Sans',
+		'Helvetica Neue',
+		sans-serif;
 	font-weight: bold;
 	text-rendering: optimizeLegibility;
-	font-size: 1.38316rem;
+	font-size: 1.383rem;
 	line-height: 1.1;
 }
+
 h4 {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
+	padding: 0;
+	margin: 0;
 	margin-bottom: 1.45rem;
 	color: inherit;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family:
+		-apple-system,
+		BlinkMacSystemFont,
+		'Segoe UI',
+		Roboto,
+		Oxygen,
+		Ubuntu,
+		Cantarell,
+		'Fira Sans',
+		'Droid Sans',
+		'Helvetica Neue',
+		sans-serif;
 	font-weight: bold;
 	text-rendering: optimizeLegibility;
 	font-size: 1rem;
 	line-height: 1.1;
 }
+
 h5 {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
+	padding: 0;
+	margin: 0;
 	margin-bottom: 1.45rem;
 	color: inherit;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family:
+		-apple-system,
+		BlinkMacSystemFont,
+		'Segoe UI',
+		Roboto,
+		Oxygen,
+		Ubuntu,
+		Cantarell,
+		'Fira Sans',
+		'Droid Sans',
+		'Helvetica Neue',
+		sans-serif;
 	font-weight: bold;
 	text-rendering: optimizeLegibility;
-	font-size: 0.85028rem;
+	font-size: 0.85rem;
 	line-height: 1.1;
 }
+
 h6 {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
+	padding: 0;
+	margin: 0;
 	margin-bottom: 1.45rem;
 	color: inherit;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family:
+		-apple-system,
+		BlinkMacSystemFont,
+		'Segoe UI',
+		Roboto,
+		Oxygen,
+		Ubuntu,
+		Cantarell,
+		'Fira Sans',
+		'Droid Sans',
+		'Helvetica Neue',
+		sans-serif;
 	font-weight: bold;
 	text-rendering: optimizeLegibility;
-	font-size: 0.78405rem;
+	font-size: 0.784rem;
 	line-height: 1.1;
 }
+
 hgroup {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
+	padding: 0;
+	margin: 0;
 	margin-bottom: 1.45rem;
 }
-ul {
-	margin-left: 1.45rem;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
-	margin-bottom: 1.45rem;
-	list-style-position: outside;
-	list-style-image: none;
-}
+
+ul,
 ol {
-	margin-left: 1.45rem;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
-	margin-bottom: 1.45rem;
+	padding: 0;
+
+	/* top | right | bottom | left */
+	margin: 0 0 1.45rem 1.45rem;
 	list-style-position: outside;
 	list-style-image: none;
 }
-dl {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
-	margin-bottom: 1.45rem;
-}
-dd {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
-	margin-bottom: 1.45rem;
-}
+
+dl,
+dd,
 p {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
+	padding: 0;
+	margin: 0;
 	margin-bottom: 1.45rem;
 }
-figure {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
-	margin-bottom: 1.45rem;
-}
+
 pre {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
+	margin: 0;
 	margin-bottom: 1.45rem;
 	font-size: 0.85rem;
 	line-height: 1.42;
-	background: hsla(0, 0%, 0%, 0.04);
+	background: hsl(0deg 0% 0% / 4%);
 	border-radius: 3px;
 	overflow: auto;
 	word-wrap: normal;
 	padding: 1.45rem;
 }
+
 table {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
+	margin: 0;
+	padding: 0;
 	margin-bottom: 1.45rem;
 	font-size: 1rem;
 	line-height: 1.45rem;
 	border-collapse: collapse;
 	width: 100%;
 }
-fieldset {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
-	margin-bottom: 1.45rem;
-}
+
 blockquote {
-	margin-left: 1.45rem;
-	margin-right: 1.45rem;
+	padding: 0;
+	margin: 1.45rem;
 	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
-	margin-bottom: 1.45rem;
 }
-form {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
-	margin-bottom: 1.45rem;
-}
-noscript {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
-	margin-bottom: 1.45rem;
-}
-iframe {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
-	margin-bottom: 1.45rem;
-}
-hr {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
-	margin-bottom: calc(1.45rem - 1px);
-	background: hsla(0, 0%, 0%, 0.2);
-	border: none;
-	height: 1px;
-}
+
+form,
+noscript,
+iframe,
 address {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
+	padding: 0;
+	margin: 0;
 	margin-bottom: 1.45rem;
 }
-b {
-	font-weight: bold;
-}
-strong {
-	font-weight: bold;
-}
-dt {
-	font-weight: bold;
-}
+
+dt,
 th {
 	font-weight: bold;
 }
+
 li {
 	margin-bottom: calc(1.45rem / 2);
 }
-ol li {
-	padding-left: 0;
-}
+
+ol li,
 ul li {
 	padding-left: 0;
 }
-li > ol {
-	margin-left: 1.45rem;
-	margin-bottom: calc(1.45rem / 2);
-	margin-top: calc(1.45rem / 2);
-}
+
+li > ol,
 li > ul {
 	margin-left: 1.45rem;
 	margin-bottom: calc(1.45rem / 2);
 	margin-top: calc(1.45rem / 2);
 }
-blockquote *:last-child {
-	margin-bottom: 0;
-}
-li *:last-child {
-	margin-bottom: 0;
-}
+
+blockquote *:last-child,
+li *:last-child,
 p *:last-child {
 	margin-bottom: 0;
 }
+
 li > p {
 	margin-bottom: calc(1.45rem / 2);
 }
-code {
-	font-size: 0.85rem;
-	line-height: 1.45rem;
-}
-kbd {
-	font-size: 0.85rem;
-	line-height: 1.45rem;
-}
+
+code,
+kbd,
 samp {
 	font-size: 0.85rem;
 	line-height: 1.45rem;
 }
-abbr {
-	border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
-	cursor: help;
-}
+
+abbr,
 acronym {
-	border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
+	border-bottom: 1px dotted hsl(0deg 0% 0% / 50%);
 	cursor: help;
 }
-abbr[title] {
-	border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
-	cursor: help;
-	text-decoration: none;
-}
+
 thead {
 	text-align: left;
 }
+
 td,
 th {
 	text-align: left;
-	border-bottom: 1px solid hsla(0, 0%, 0%, 0.12);
+	border-bottom: 1px solid hsl(0deg 0% 0% / 12%);
 	font-feature-settings: 'tnum';
-	-moz-font-feature-settings: 'tnum';
-	-ms-font-feature-settings: 'tnum';
-	-webkit-font-feature-settings: 'tnum';
-	padding-left: 0.96667rem;
-	padding-right: 0.96667rem;
-	padding-top: 0.725rem;
-	padding-bottom: calc(0.725rem - 1px);
+
+	/* top | right | bottom | left */
+	padding: 0.725rem 0.967rem calc(0.725rem - 1px);
 }
+
 th:first-child,
 td:first-child {
 	padding-left: 0;
 }
+
 th:last-child,
 td:last-child {
 	padding-right: 0;
 }
+
 tt,
 code {
-	background-color: hsla(0, 0%, 0%, 0.04);
+	background-color: hsl(0deg 0% 0% / 4%);
 	border-radius: 3px;
-	font-family: 'SFMono-Regular', Consolas, 'Roboto Mono', 'Droid Sans Mono',
-		'Liberation Mono', Menlo, Courier, monospace;
+	font-family:
+		SFMono-Regular,
+		Consolas,
+		'Roboto Mono',
+		'Droid Sans Mono',
+		'Liberation Mono',
+		Menlo,
+		Courier,
+		monospace;
 	padding: 0;
 	padding-top: 0.2em;
 	padding-bottom: 0.2em;
 }
+
 pre code {
 	background: none;
 	line-height: 1.42;
 }
-code:before,
-code:after,
-tt:before,
-tt:after {
+
+code::before,
+code::after,
+tt::before,
+tt::after {
 	letter-spacing: -0.2em;
 	content: ' ';
 }
-pre code:before,
-pre code:after,
-pre tt:before,
-pre tt:after {
+
+pre code::before,
+pre code::after,
+pre tt::before,
+pre tt::after {
 	content: '';
 }
+
 @media only screen and (max-width: 480px) {
 	html {
 		font-size: 100%;
@@ -640,19 +582,16 @@ html[lang='ar'] * {
 	font-family: sans-serif, serif;
 }
 
-body {
-	background: #f5f5f5;
-	background: linear-gradient(to bottom, #f5f5f5);
-}
-
 section {
 	margin: 0 0 2rem;
 }
 
 .App-wrapper {
 	display: flex;
-	/* for iPhone5 using chrome dev tools */
+
+	/* for iPhone5 */
 	min-height: 568px;
+	/* stylelint-disable-next-line declaration-block-no-duplicate-properties */
 	min-height: 100vh;
 	flex-direction: column;
 }
@@ -660,7 +599,7 @@ section {
 .Content-wrapper {
 	margin: 0 auto;
 	max-width: 960px;
-	padding: 1.45rem 1.0875rem;
+	padding: 1.45rem 1.087rem;
 }
 
 .Font-awesome-icon {
@@ -675,15 +614,15 @@ section {
 	margin: 0 0 2rem;
 	min-height: 5rem;
 	position: sticky;
-	background: rebeccapurple;
-	background: linear-gradient(to top right, rebeccapurple, #9198e5);
+	background: #639;
+	/* stylelint-disable-next-line declaration-block-no-duplicate-properties */
+	background: linear-gradient(to top right, #639, #9198e5);
 }
 
 .Nav-bar {
 	display: flex;
-	flex-wrap: wrap;
+	flex-flow: row wrap;
 	align-items: center;
-	flex-direction: row;
 }
 
 .Nav-bar-header {
@@ -696,7 +635,7 @@ html[dir='rtl'] .Nav-bar-header {
 }
 
 .Nav-bar a {
-	color: white;
+	color: #fff;
 }
 
 .Nav-bar-items {
@@ -705,10 +644,9 @@ html[dir='rtl'] .Nav-bar-header {
 	padding: 0;
 	float: right;
 	display: flex;
-	flex-wrap: wrap;
+	flex-flow: row wrap;
 	list-style: none;
 	align-items: center;
-	flex-direction: row;
 	justify-content: flex-end;
 }
 
@@ -739,7 +677,7 @@ html[dir='rtl'] .Nav-item:last-of-type {
 	display: inline-block;
 	text-decoration: none;
 	padding: 0.4rem 0.2rem;
-	background-color: rgba(0, 0, 0, 0.3);
+	background-color: rgb(0 0 0 / 30%);
 }
 
 .Nav-item:last-of-type + * {
@@ -754,22 +692,24 @@ html[dir='rtl'] .Nav-item:last-of-type {
 	padding: 1rem;
 	background: #fff;
 	border-radius: 0.5rem;
-	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-		0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+	box-shadow:
+		0 2px 2px 0 rgb(0 0 0 / 14%),
+		0 3px 1px -2px rgb(0 0 0 / 20%),
+		0 1px 5px 0 rgb(0 0 0 / 12%);
 }
 
 .Footer {
 	color: #fff;
 	padding: 2rem 0 1.5rem;
-	background: rebeccapurple;
-	background: linear-gradient(to top, rebeccapurple, #9198e5);
+	background: #639;
+	/* stylelint-disable-next-line declaration-block-no-duplicate-properties */
+	background: linear-gradient(to top, #639, #9198e5);
 }
 
 .Footer-items {
 	display: flex;
-	flex-wrap: wrap;
 	align-items: center;
-	flex-direction: column;
+	flex-flow: column wrap;
 }
 
 .Footer-text {
@@ -784,6 +724,7 @@ html[dir='rtl'] .Nav-item:last-of-type {
 	flex-direction: row;
 }
 
+/* stylelint-disable-next-line no-descending-specificity */
 .Footer-links > * {
 	float: left;
 	margin: 0 1rem 0 0;
@@ -802,7 +743,7 @@ html[dir='rtl'] .Footer-links > * {
 	padding: 0 0.5rem;
 	line-height: 36px;
 	text-align: center;
-	background-color: rebeccapurple;
+	background-color: #639;
 }
 
 @media (max-width: 555px) {
