--- a/src/styles/courses.css
+++ b/src/styles/courses.css
@@ -4,8 +4,7 @@
 
 .Course-provider:first-of-type .Courses-list {
 	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
+	flex-flow: row wrap;
 	justify-content: space-between;
 }
 
